--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,8 +4,17 @@
     </head>
     <body>
         <div>
-            <h1><a href="">Django Girls Blog</a></h1>
+            <h1><a href="">Dhanya's Blog</a></h1>
         </div>
+
+
+{% for post in posts %}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
 
         <div>
             <p>published: 14.06.2014, 12:14</p>
@@ -33,4 +42,6 @@ And many more benefits!
 So try it out! It may help you in some way!</p>
         </div>
 
-      
+
+    </body>
+</html>
